--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/website.ico">
+    <link rel="icon" href="https://github.com/isabelboncompte/isabelboncompte/blob/main/public/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isabel Boncompte</title>
   </head>
